Fix horizontal scroll

--- a/_harp/assets/css/_partials/_base.scss
+++ b/_harp/assets/css/_partials/_base.scss
@@ -14,6 +14,7 @@ $spacer: 20px;
 body {
   background-color: $mint;
   color: $darkblue; 
+  overflow-x: hidden;
 }
 
 a {
